RESOLVED FIXED167803
Simple line layout: Removing adjacent trailing whitespace runs should not crash.
https://bugs.webkit.org/show_bug.cgi?id=167803
Summary Simple line layout: Removing adjacent trailing whitespace runs should not crash.
alan
Reported 2017-02-03 10:56:16 PST
regression r211456
Attachments
Patch (5.75 KB, patch)
2017-02-03 12:07 PST, alan
no flags
alan
Comment 1 2017-02-03 10:56:46 PST
alan
Comment 2 2017-02-03 12:07:20 PST
WebKit Commit Bot
Comment 3 2017-02-03 13:18:55 PST
Comment on attachment 300554 [details] Patch Clearing flags on attachment: 300554 Committed r211647: <http://trac.webkit.org/changeset/211647>
WebKit Commit Bot
Comment 4 2017-02-03 13:19:00 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.